# museummaster

./: .gitignore  README.md  artiou  news  sitemap.xml
.cursor/rules/: project-core.mdc
.github/workflows/: deploy-ios.yml  python-test.yml  semantic-release.yml
backend/: .cursorrules  .env.example  .gitignore  Taskfile.yml  alembic.ini  app.py  database.py  depends.py  flags.template.yml  flags.test.yml  flags.yml  models.py  museum.db  pyproject.toml  requirements.test.txt  routes.py  sql_models.py
backend/alembic/: README  env.py
backend/alembic/versions/museum-staging/: 435a7593c186_.py  703ea995db4b_.py  aca07de10580_.py  add_collection_item.py  c05e6f1f0367_.py
backend/commands/: __init__.py
backend/data/: fontaines-a-boire.csv  marches-decouverts.csv  sanisettesparis.csv  sites-disposant-du-service-paris-wi-fi.csv
backend/middleware/: __init__.py  authentication.py  authorization.py
backend/models/: __init__.py  auth.py  collection.py
backend/policy/: policy.csv
backend/routers/: __init__.py  analyze.py  auth.py  tts.py
backend/src/: __init__.py
backend/src/routes/: __init__.py  analyze.py  auth.py  favorites.py  root.py  routes.py  scan_records.py  subscription.py  tts.py  users.py
backend/tests/: __init__.py  conftest.py  fixtures.py  report_unit.xml  utils.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/sqlalchemy_fixture_factory/: sqla_fix_fact.py
backend/tests/unit/: __init__.py  test_analyze.py  test_appstore_notifications.py  test_auth.py  test_auth_apple.py  test_favorites.py  test_root.py  test_scan_records.py  test_subscription_quota_stack.py  test_tts.py  test_users.py
backend/utils/: __init__.py  appstore_server_notifications.py  auto_enum.py  config.py  flags.py  json_dumps.py  museumflags.py  museummodels.py  pagination.py  subscription.py  utils.py  visionflags.py  wrapped_response.py
backend/utils/rbac/: model.conf  policy.csv
backend/utils/tests/: utils.py
en/news/: index.html
fr/news/: index.html
frontend/: .cursorrules  .env.example  .releaserc.json  CHANGELOG.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  svg.d.ts
frontend/android/: settings.gradle
frontend/app/: _layout.tsx  collection.tsx  history.tsx  index.tsx  privacy.tsx  result.tsx  settings.tsx  subscription.tsx  terms.tsx
frontend/assets/: animation01.json
frontend/ios/: Podfile
frontend/patches/: expo-audio+1.1.1.patch
frontend/scripts/: sync-app-version.js
website/: build-news.mjs  cron-build-website.sh  news.css  sitemap-core.xml  sitemap.xml  styles.css  test-news-build.mjs  update_sitemap_lastmod.py
website/artiou/: index.html  llms-en.txt  llms.txt  main.js  news  news.css  (+4 more)
(+134 files in other folders)
