[tool.poetry]
name = "museum-guide-backend"
version = "0.1.0"
description = "FastAPI backend for Museum Guide MVP"
authors = []
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
openai = "^1.99.0"
python-dotenv = "^1.0.1"

# Added for gagaou compatibility
pydantic = "^2.7.2"
pydantic-settings = "^2.2.1"
starlette-context = "^0.3.6"
casbin = "^1.36.2"
pyyaml = "^6.0.1"
PyJWT = "^2.10.1"
websockets = "^16.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.28.1"
ruff = "^0.12.8"
black = "^26.1.0"
isort = "^8.0.0"
autoflake = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
